  ---------------------------------------------------------------------------
  HTMLOutputHandler           org.clapper.htmloutput  org.clapper.output.html
  SimpleSummaryOutputHandler  org.clapper.curn        org.clapper.curn.output
  TextOutputHandler           org.clapper.curn        org.clapper.curn.output
  ---------------------------------------------------------------------------

- When parsed from the config, output handlers are now wrapped in
  ConfiguredOutputHandler objects, which contain all the config data for
  the handler, and provide a means to instantiate a handler easily.

- Curn now supports multiple output handlers of the same class in the same
  configuration file.

- Curn now comes bundled with a new ScriptOutputHandler 
  (org.clapper.output.script.ScriptOutputHandler). This handler requires the
  Apache Jakarta Bean Scripting Framework (BSF), available at
  "http://jakarta.apache.org/bsf/". It's basically a shim that uses BSF
  to permit output handlers to be written in any BSF-supported scripting
  language (e.g., Jython, JRuby, Rhino Javascript, etc.)


Version 1.3.3:

- Fixed slight problem when translating embedded newlines into spaces in
  parsed XML character data.


Version 1.3.2:

- Now handles feeds with alternate character sets (e.g., UTF-8) better.
  Note that there's still the possibility of information loss if a feed
  with an alternate character set such as UTF-8 is saved to a local file,
  and the local file is then parsed by curn. That's because curn currently
  doesn't have a way to save the original character set, so it converts the
  feed to the Java VM's native character set before saving it to the local
  file.

- Added adapter classes for the Rome RSS parser. (See
  https://rome.dev.java.net/). Test with Rome 0.3. Rome supports all the
  current RSS feed types.

  NOTE: Rome requires version 1.0 of JDOM (http://www.jdom.org/)


Version 1.3.1:

- HTMLOutputHandler now displays channel link properly.


Version 1.3:
