@@ -368,32 +368,6 @@ Ant version:    Apache Ant version 1.6.1 compiled on February 12 2004</pre>
 	</tr>
 
 	<tr valign="top" class="evenRow">
-	  <td align="left" class="code">-Q</td>
-	  <td align="left" class="code"><a name="--no-quiet">--no-quiet</a></td>
-          <td>Normally, if an RSS feed contains no new items,
-	      most <i>curn</i> output handlers display the site's name and
-	      URL, followed by something like "No new items." Similarly, if
-	      <i>curn</i> can't contact a feed site, or if the site's XML
-	      is unparseable, <i>curn</i> displays an error message. This
-	      option tells <i>curn</i> to silently ignore sites with no data
-	      or bad XML.
-	      Also see the <a href="#--quiet">-q</a> option.
-	      This option overrides any
-	      <a href="#Cfg_Quiet" class="code">Quiet</a>
-	      setting in the configuration file.
-	  </td>
-	</tr>
-
-	<tr valign="top" class="oddRow">
-	  <td align="left" class="code">-q</td>
-	  <td align="left" class="code"><a name="--quiet">--quiet</a></td>
-          <td>Unconditionally enable quiet mode, overriding any
-	      <a href="#Cfg_Quiet" class="code">Quiet</a>
-	      setting in the configuration file.
-	  </td>
-	</tr>
-
-	<tr valign="top" class="evenRow">
 	  <td align="left" class="code">-R</td>
 	  <td align="left" class="code"><a name="--no-rss-version">--no-rss-version</a></td>
           <td>Do not display the RSS version for each feed.
