@@ -90,20 +90,6 @@ SortBy: none
 MaxThreads: 5
 
 # ---------------------------------------------------------------------------
-# Quiet: Normally, if a site's RSS feed contains no new URLs, curn
-#        displays the site's name and URL, followed by "No new items".
-#        Similarly, if curn can't contact a site, or if a site's XML is
-#        unparseable, curn displays an error message. Setting the
-#        "Quiet" configuration option to "true" (or "yes") tells curn
-#        to suppress both of the above displays.
-#
-# See also: Command line options --quiet, -q, --noquiet, -Q
-#
-# OPTIONAL. Default: false
-
-Quiet: false
-
-# ---------------------------------------------------------------------------
 # SummaryOnly: Some RSS feeds provide a description for each item, in addition
 #              to the (brief) title. Setting "SummaryOnly" to "true" (or 
 #              "yes") suppresses display of the description. This parameter
